trunk/Archive2/98/6c4955d2473c82/output
main.cpp: In function 'int main()':
main.cpp:3:10: error: expected primary-expression before 'int'
     if ((int i = 0) == 0) {}
          ^
main.cpp:3:10: error: expected ')' before 'int'
main.cpp:4:1: error: expected ')' before '}' token
 }
 ^
main.cpp:4:1: error: expected primary-expression before '}' token
